--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -33,7 +33,7 @@ header h3{
 }
 
 header div {
-    padding-right: 20px;
+    /* padding-right: 20px; */
     display: flex;
     justify-content: flex-end;
 }
@@ -43,7 +43,7 @@ header div span {
     cursor: pointer;
     max-width: 100%;
     font: 400 13.3333px Arial;
-    flex-grow: 1;
+    /* flex-grow: 1; */
 }
 
 header div a {
@@ -120,11 +120,212 @@ header div a {
 
 #hiw div {
     display: flex;
-    justify-content:space-around;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
 }
+
 
 #hiw div h3 {
     color: #4a4a4a;
 }
 
+.meal-day {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.meal-day h2 {
+    border-bottom: 2px solid #4a4a4a;
+}
+
+.meal-day-section {
+    padding-top: 3%;
+    display: flex;
+    justify-content: center;
+
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 40%;
+  margin: 2%;
+  border-radius: 5px;
+  padding-bottom: 4%;
+}
+
+.card:hover
+ {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.card img {
+  border-radius: 5px 5px 0 0;
+  width: .20%;
+}
+
+.container {
+  padding: 2px 16px;
+  text-align: center;
+}
+
+.container p {
+    color: #4a4a4a;
+}
+
+#order {
+    display: block;
+    cursor: pointer;
+    text-decoration: inherit;
+    border-radius: 32px;
+    background-color: #ff0000;
+    padding: 8px 16px;
+    color: #ffffff;
+    font-weight: 500;
+    line-height: 24px;
+    flex-grow: 1;
+    font: 400 13.3333px Arial;
+}
+
+/* Login Modal */
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 40%;
+    text-align: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+
+  /* Add Animation */
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+  }
+
+  /* The Close Button */
+  .close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .modal-header {
+    padding: 2px 16px;
+    background-color: #4a4a4a;
+    color: white;
+    text-align: center;
+  }
+
+  .modal-body {padding: 2px 16px;}
+
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: #4a4a4a;
+    color: white;
+  }
+
+  .modal-footer a {
+      color: #ff0000;
+  }
+
+
+  .page_form {
+    background: #fff;
+    padding: 40px 60px 60px 60px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px rgba(0,0,0,.7);
+    text-align: center;
+  }
+
+  .form-group {
+    width:100%;
+  }
+  .form-field {
+    width:100%;
+    box-sizing: border-box;
+    padding: 15px;
+    margin: 5px;
+    outline: 0;
+    border: 1px solid #ff0000;
+    border-radius: 4px;
+    font-family: inherit;
+  }
+
+  .page_form button[type="submit"] {
+    margin: 20px auto 10px auto;
+    text-align: center;
+    padding: 0.8rem 1rem;
+    display: block;
+    cursor: pointer;
+    width: 50%;
+    text-decoration: inherit;
+    border-radius: 32px;
+    background-color: #ff0000;
+    color: #ffffff;
+    font-weight: 500;
+    line-height: 24px;
+    flex-grow: 1;
+    font: 400 13.3333px Arial;
+  }
+
+  footer {
+    background: #4a4a4a;
+    width: 100%;
+    text-align: center;
+    padding-top: 10vh;
+    height: 20vh;
+    margin-top: 5%;
+    color: #fff;
+}
+
+
+@media only screen and (max-width: 600px) {
+    #hiw-div {
+        flex-direction: column;
+    }
+    .meal-day-section {
+        grid-template-columns: 1fr;
+        margin-top: 4%;
+    }
+
+    .meal-day-section .card {
+        margin-top: 4%;
+    }
+  }
 
